--- a/backend/weatherapp/src/main/resources/application.properties
+++ b/backend/weatherapp/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=weatherapp
-server.port=8081
+server.port=${PORT:8081}
 weather.api.key=${WEATHER_API_KEY}
+cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:8080}
