--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -55,11 +55,25 @@
 
     <build>
         <plugins>
+
+            <!-- Spring Boot Plugin (already present) -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <!-- NEW: Skip tests for Railway deployment -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
+
 </project>
 
